Fix: search icon fine alignment

--- a/inc/assets/less/tc_custom.less
+++ b/inc/assets/less/tc_custom.less
@@ -252,7 +252,7 @@ a.social-icon.icon-instagram {
 }
 .widget_search h3:before {
   content: "\f002";
-  top: -1.7px;
+  top: -1.9px;
 }
 .widget_nav_menu h3:before {
   content: "\f0c9";
@@ -322,6 +322,7 @@ article.format-link .format-icon:before {
 /* ARCHIVES */
 .search .search-header .format-icon:before {
   content: "\f002";
+  top: -1.9px;
 }
 
 .archive.date .archive-header .format-icon:before {
